Closed Bug 1838828 Opened 2 years ago Closed 2 years ago

Crash in [@ mozilla::TrackBuffersManager::FindSampleIndex]

Categories

(Core :: Audio/Video: Playback, defect)

Unspecified
Windows 11
defect

Tracking

()

RESOLVED FIXED
117 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox-esr115 --- unaffected
firefox115 --- unaffected
firefox116 + fixed
firefox117 + fixed

People

(Reporter: padenot, Assigned: padenot)

References

Details

(Keywords: crash, topcrash)

Crash Data

Attachments

(2 files)

Crash report: https://crash-stats.mozilla.org/report/index/fd9d7268-ffa6-4584-8022-87b800230616

MOZ_CRASH Reason: MOZ_CRASH(FindSampleIndex called with invalid arguments)

Top 10 frames of crashing thread:

0  xul.dll  mozilla::TrackBuffersManager::FindSampleIndex  dom/media/mediasource/TrackBuffersManager.cpp:2613
1  xul.dll  mozilla::TrackBuffersManager::Seek  dom/media/mediasource/TrackBuffersManager.cpp:2648
2  xul.dll  mozilla::MediaSourceTrackDemuxer::DoSeek  dom/media/mediasource/MediaSourceDemuxer.cpp:394
3  xul.dll  mozilla::detail::RunnableMethodArguments<StoreCopyPassByRRef<mozilla::media::TimeUnit> >::apply<mozilla::MediaSourceTrackDemuxer, RefPtr<mozilla::MozPromise<mozilla::media::TimeUnit, mozilla::MediaResult, 1> >  const  xpcom/threads/nsThreadUtils.h:1164
3  xul.dll  std::invoke  /builds/worker/fetches/vs/VC/Tools/MSVC/14.29.30133/include/type_traits:1534
3  xul.dll  std::_Apply_impl  /builds/worker/fetches/vs/VC/Tools/MSVC/14.29.30133/include/tuple:974
3  xul.dll  std::apply  /builds/worker/fetches/vs/VC/Tools/MSVC/14.29.30133/include/tuple:979
3  xul.dll  mozilla::detail::RunnableMethodArguments<StoreCopyPassByRRef<mozilla::media::TimeUnit> >::apply  xpcom/threads/nsThreadUtils.h:1162
3  xul.dll  mozilla::detail::MethodCall<mozilla::MozPromise<mozilla::media::TimeUnit, mozilla::MediaResult, 1>, RefPtr<mozilla::MozPromise<mozilla::media::TimeUnit, mozilla::MediaResult, 1> >   xpcom/threads/MozPromise.h:1569
3  xul.dll  mozilla::detail::ProxyRunnable<mozilla::MozPromise<mozilla::media::TimeUnit, mozilla::MediaResult, 1>, RefPtr<mozilla::MozPromise<mozilla::media::TimeUnit, mozilla::MediaResult, 1> >   xpcom/threads/MozPromise.h:1589

This is a bug to investigate the long-standing issue about not being able to retrieve a MediaRawData after a seek, that I've added diagnostic assertions for in bug 1838256.

This indicates that their is an issue somewhere here:

https://searchfox.org/mozilla-central/source/dom/media/mediasource/TrackBuffersManager.cpp#2643-2648

We successfully retrieve an index in which we'll supposedly find the range we're looking for, based on buffered ranges, but then when attempting to find the actual sample, we can't find it. This indicates a mismatch between buffered ranges and actual sample data.

Crash Signature: [@ mozilla::TrackBuffersManager::FindSampleIndex] → [@ mozilla::TrackBuffersManager::FindSampleIndex] [@ mozilla::MediaSourceTrackDemuxer::DoSeek]
See Also: → 1835760

The bug is linked to a topcrash signature, which matches the following criterion:

  • Top 10 desktop browser crashes on nightly

For more information, please visit BugBot documentation.

Keywords: topcrash

The severity field is not set for this bug.
:jimm, could you have a look please?

For more information, please visit BugBot documentation.

Flags: needinfo?(jmathies)
Attachment #9342597 - Attachment description: WIP: Bug 1838828 - Fix obsolete comment in Assertions.h: MOZ_RELEASE_ASSERT is no-op only in late beta and release. → Bug 1838828 - Fix obsolete comment in Assertions.h: MOZ_RELEASE_ASSERT is no-op only in late beta and release. r?chunmin
Pushed by cchang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/cffe107089aa Downgrade assertions to only crash in Nigthly. r=chunmin https://hg.mozilla.org/integration/autoland/rev/ac180e7135da Fix obsolete comment in Assertions.h: MOZ_RELEASE_ASSERT is no-op only in late beta and release. r=chunmin
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 117 Branch

Please nominate this for Beta approval when you get a chance.

Flags: needinfo?(padenot)

Comment on attachment 9342594 [details]
Bug 1838828 - Downgrade assertions to only crash in Nigthly. r?alwu

Beta/Release Uplift Approval Request

  • User impact if declined: Crashes on an assertion that was intended to be nightly-only.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This has baked in nightly for some time, and is identical to the code we're running in release.
  • String changes made/needed:
  • Is Android affected?: Yes
Flags: needinfo?(padenot)
Attachment #9342594 - Flags: approval-mozilla-beta?
Attachment #9342597 - Flags: approval-mozilla-beta?

Comment on attachment 9342594 [details]
Bug 1838828 - Downgrade assertions to only crash in Nigthly. r?alwu

Approved for 116.0b4

Attachment #9342594 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9342597 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Regressions: 1842496
Flags: needinfo?(jmathies)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: