Bug 1838828 - Downgrade assertions to only crash in Nigthly. r=chunmin

Differential Revision: https://phabricator.services.mozilla.com/D182914